--- a/fund-leaders/business-value.mdx
+++ b/fund-leaders/business-value.mdx
@@ -1,218 +1,163 @@
 ---
-title: "Business Value & ROI"
-description: "Comprehensive ROI frameworks, cost-benefit analysis, and strategic positioning advantages of Amos including open source and AI-linked benefits"
+title: "Impact & Benefits"
+description: "Understanding the business value and return on investment for AMOS implementation"
 ---
 
-## Executive Summary
+## Business Value Overview
 
-Amos delivers measurable business value through operational efficiency, strategic control, risk reduction, and AI enablement. Our open architecture ensures you capture value while maintaining complete control and future optionality.
+AMOS delivers value through operational efficiency, data quality improvements, and strategic control. The open-source architecture provides cost advantages while maintaining complete control over your data infrastructure.
 
-## Quantifiable Business Impact
+## Key Benefits
+
+<CardGroup cols={2}>
+  <Card title="Operational Efficiency" icon="clock">
+    Reduce manual reporting and reconciliation tasks through automated workflows
+  </Card>
+  <Card title="Data Quality" icon="check-circle">
+    Improve accuracy and consistency through standardized data models and validation
+  </Card>
+  <Card title="Strategic Control" icon="shield">
+    Maintain complete control over data and infrastructure with open-source deployment
+  </Card>
+  <Card title="Cost Management" icon="dollar-sign">
+    Lower total cost of ownership compared to proprietary data platforms
+  </Card>
+</CardGroup>
+
+## Operational Impact
+
+**Reporting Efficiency**:
+- Reduce monthly reporting cycles from weeks to days
+- Automate data gathering and reconciliation processes
+- Standardize reporting across multiple funds and systems
+
+**Data Quality**:
+- Eliminate manual data entry errors through automated validation
+- Ensure consistency across all systems and reports
+- Maintain complete audit trails for regulatory compliance
+
+**Decision Support**:
+- Access real-time portfolio performance and risk metrics
+- Enable faster due diligence with integrated data analysis
+- Support data-driven investment decisions with comprehensive insights
+
+## Cost Considerations
+
+**Implementation Investment**:
+- Initial setup including data migration and system integration
+- Team training and change management
+- Infrastructure setup and configuration
+
+**Ongoing Operations**:
+- Hosting and infrastructure costs (typically lower than proprietary alternatives)
+- Maintenance and support
+- Continuous improvement and feature development
+
+**Cost Advantages**:
+- No licensing fees for open-source components
+- Flexibility to choose hosting providers and infrastructure
+- Ability to customize without vendor approval or additional costs
+
+## Strategic Benefits
+
+**Data Control**:
+- Complete ownership of data and processing logic
+- Ability to audit all data transformations and calculations
+- No dependency on vendor roadmaps or business decisions
+
+**Flexibility**:
+- Customize the platform to meet specific fund requirements
+- Integrate with existing systems using standard protocols
+- Adapt to changing business needs without vendor constraints
+
+**Risk Mitigation**:
+- Avoid vendor lock-in with open-source architecture
+- Maintain business continuity regardless of vendor relationships
+- Ensure long-term access to data and functionality
+
+## ROI Framework
+
+**Direct Cost Savings**:
+- Reduced manual labor for reporting and reconciliation
+- Lower technology costs through consolidation
+- Decreased audit preparation time
+
+**Operational Benefits**:
+- Faster decision-making through improved data access
+- Enhanced investor relations through better reporting
+- Improved compliance through automated controls
+
+**Strategic Value**:
+- Future-ready data foundation for AI and analytics initiatives
+- Competitive advantage through superior operational capabilities
+- Long-term cost control through open-source architecture
+
+## Implementation Approach
+
+**Phase 1: Foundation**
+- Establish core data infrastructure
+- Migrate critical data sources
+- Implement basic reporting workflows
+
+**Phase 2: Optimization**
+- Expand data integration across all systems
+- Implement advanced analytics and reporting
+- Optimize workflows for maximum efficiency
+
+**Phase 3: Enhancement**
+- Add AI and machine learning capabilities
+- Develop custom analytics and insights
+- Scale across multiple funds and asset classes
+
+## Open Source Benefits
+
+**Strategic Control**:
+- Deploy on your infrastructure with complete data custody
+- Avoid vendor lock-in through open-source architecture
+- Maintain control over customizations and integrations
+
+**Transparency & Auditability**:
+- Full visibility into data processing and transformations
+- Complete audit trails for regulatory compliance
+- Version-controlled configurations with change history
+
+**Cost Advantages**:
+- No licensing fees for core platform components
+- Flexibility to choose hosting providers and infrastructure
+- Lower total cost of ownership compared to proprietary solutions
+
+**Future Flexibility**:
+- Ability to modify and extend the platform as needs evolve
+- Standard tooling ensures portability and skills transferability
+- Community-driven development and shared best practices
+
+## Governance & Compliance
+
+**Change Management**:
+- All system changes managed through pull request workflows
+- Multi-level approval processes for different change types
+- Automated testing and validation before deployment
+
+**Access Control**:
+- Role-based access control aligned with fund organizational structure
+- Integration with existing identity management systems
+- Comprehensive audit logging for all system access
+
+**Regulatory Support**:
+- Built-in compliance frameworks for SOC 2 and ISO 27001
+- Automated evidence collection for audits and regulatory reviews
+- Complete data lineage and processing transparency
+
+## Next Steps
 
 <CardGroup cols={3}>
-  <Card title="75% Faster Reporting" icon="clock">
-    Monthly reporting cycles reduced from weeks to days with automated workflows
+  <Card title="Use Cases" icon="briefcase" href="/fund-leaders/use-cases">
+    Explore specific applications by fund type
   </Card>
-  <Card title="90% Data Accuracy" icon="check-circle">
-    Eliminate manual errors through automated reconciliation and validation
+  <Card title="Implementation" icon="rocket" href="/fund-leaders/implementation">
+    Learn about implementation approach
   </Card>
-  <Card title="50% Cost Reduction" icon="dollar-sign">
-    Lower operational costs while maintaining full control and transparency
-  </Card>
-  <Card title="60% Faster AI Delivery" icon="zap">
-    Accelerated AI initiatives through unified, governed data foundation
-  </Card>
-  <Card title="Zero Lock-in Risk" icon="key">
-    Complete strategic control with self-hosting and reversible deployment
-  </Card>
-  <Card title="100% Audit Ready" icon="shield-check">
-    Full lineage and version control for regulatory compliance
-  </Card>
-</CardGroup>
-
-import { MetricCard } from '../components/MetricCard.mdx'
-
-<MetricCard />
-
-## Comprehensive ROI Framework
-
-### Direct Cost Savings
-
-<CardGroup cols={2}>
-  <Card title="Operational Efficiency" icon="cog">
-    **$500K-2M annual savings** through automated reporting, reconciliation, and workflow optimization
-  </Card>
-  <Card title="Technology Consolidation" icon="building">
-    **30-50% reduction** in data infrastructure costs through unified platform approach
-  </Card>
-</CardGroup>
-
-**Before Amos vs. After Amos:**
-- **Manual Reporting**: 40 hours/month → 10 hours/month (75% reduction)
-- **Data Reconciliation**: 20 hours/month → 2 hours/month (90% reduction)  
-- **Audit Preparation**: 160 hours/quarter → 40 hours/quarter (75% reduction)
-- **System Integration Costs**: $200K/year → $50K/year (75% reduction)
-
-### Revenue Enhancement & Strategic Value
-
-<CardGroup cols={2}>
-  <Card title="Faster Decision Making" icon="zap">
-    **2-3 weeks faster** deal execution through real-time data insights and automated due diligence
-  </Card>
-  <Card title="Enhanced Fundraising" icon="trending-up">
-    **15-25% improvement** in fundraising success through superior investor reporting and transparency
-  </Card>
-</CardGroup>
-
-### Risk Mitigation & Control Benefits
-
-<CardGroup cols={2}>
-  <Card title="Operational Risk Reduction" icon="shield">
-    **80% reduction** in data errors and compliance violations through automated controls
-  </Card>
-  <Card title="Strategic Control" icon="lock">
-    **Zero vendor lock-in risk** with open source components and self-hosting options
-  </Card>
-</CardGroup>
-
-## AI-Linked ROI & Future Value
-
-### AI Readiness Investment Return
-
-<CardGroup cols={3}>
-  <Card title="L0 → L3 Progression" icon="stairs">
-    Transform from fragmented data to AI-ready feature stores in 6-12 months
-  </Card>
-  <Card title="AI Cycle Time" icon="clock">
-    **60% faster** AI project delivery through unified, governed data foundation
-  </Card>
-  <Card title="Decision Support ROI" icon="chart-line">
-    **25-40% improvement** in investment decision quality through AI-enhanced analytics
-  </Card>
-</CardGroup>
-
-**AI Use Case Value Examples:**
-- **Operations AI**: $300K-800K annual savings through intelligent workflow automation
-- **Finance/IR AI**: $200K-500K annual value through automated reporting and investor insights  
-- **Investment AI**: $1M-5M annual alpha generation through enhanced decision support
-
-## Strategic Benefits & Competitive Positioning
-
-### Realizing Value Through Open Adoption
-
-<CardGroup cols={2}>
-  <Card title="Strategic Independence" icon="shield">
-    **Complete control** over your data platform with no vendor dependencies or lock-in risks
-  </Card>
-  <Card title="Transparent Operations" icon="eye">
-    **Full auditability** with version-controlled configs and end-to-end lineage for regulatory confidence
-  </Card>
-  <Card title="Future Flexibility" icon="rotate-reverse">
-    **Reversible deployment** and standard tooling ensure you can adapt as needs evolve
-  </Card>
-  <Card title="Innovation Control" icon="rocket">
-    **Extend and customize** open connectors and pipelines to meet unique fund requirements
-  </Card>
-</CardGroup>
-
-### Competitive Advantage Framework
-
-<CardGroup cols={3}>
-  <Card title="Superior Reporting" icon="chart-line">
-    **Real-time dashboards** and automated investor reports that exceed industry standards
-  </Card>
-  <Card title="Market Responsiveness" icon="zap">
-    **Faster deal execution** through instant access to portfolio insights and market data
-  </Card>
-  <Card title="Due Diligence Excellence" icon="search">
-    **Enhanced analysis capabilities** with integrated data from multiple sources and AI assistance
-  </Card>
-</CardGroup>
-
-### Scalability & Growth Enablement
-
-- **Multi-Fund Support**: Standardized processes across portfolio with centralized governance
-- **Geographic Expansion**: Cloud-native architecture supports global operations seamlessly  
-- **Asset Class Flexibility**: Unified platform handles equity, debt, real estate, and alternative investments
-- **Team Growth**: Self-service analytics reduce dependency on technical resources
-
-### Long-Term Strategic Value
-
-<Note>
-**Open Source Risk Mitigation**: Unlike proprietary platforms, Amos ensures your investment in data infrastructure remains valuable regardless of vendor relationships or market changes.
-</Note>
-
-**Strategic Control Benefits:**
-- **Data Sovereignty**: Complete control over where and how your data is stored and processed
-- **Compliance Confidence**: Full audit trails and version control support regulatory requirements
-- **Innovation Freedom**: Extend capabilities without vendor approval or additional licensing costs
-- **Exit Flexibility**: Standard tooling and open formats ensure smooth transitions if needs change
-
-## Cost-Benefit Analysis Framework
-
-import { ROICalculator } from '../components/ROICalculator.mdx'
-
-<ROICalculator />
-
-### Investment Components
-
-<CardGroup cols={2}>
-  <Card title="Implementation Costs" icon="dollar-sign">
-    **$150K-500K** initial setup including data migration, system integration, and team training
-  </Card>
-  <Card title="Ongoing Operations" icon="clock">
-    **$50K-150K annually** for hosting, maintenance, and continuous improvement (significantly lower than proprietary alternatives)
-  </Card>
-</CardGroup>
-
-### Payback Timeline & ROI Progression
-
-**Phase 1 (Months 1-6): Adapt**
-- Initial efficiency gains: 25-40% improvement in reporting speed
-- Cost savings: $100K-300K through process automation
-- Risk reduction: Elimination of manual error-prone processes
-
-**Phase 2 (Months 6-12): Align**  
-- Full operational benefits: 75% faster reporting cycles
-- Strategic value: Enhanced investor relations and compliance readiness
-- Cumulative savings: $300K-800K annually
-
-**Phase 3 (Months 12+): Upgrade**
-- AI enablement: Advanced analytics and decision support capabilities
-- Competitive advantage: Market-leading operational efficiency
-- Total ROI: 200-400% within 24 months
-
-<Note>
-**Typical ROI Achievement**: 6-12 months for operational benefits, 12-18 months for full strategic value realization. Open source approach reduces total cost of ownership by 30-50% compared to proprietary alternatives.
-</Note>
-
-## Business Case Template
-
-### Quantified Benefits Summary
-- **Annual Cost Savings**: $500K-2M through operational efficiency
-- **Revenue Enhancement**: $200K-1M through faster decision-making and superior reporting
-- **Risk Mitigation Value**: $100K-500K through compliance automation and error reduction
-- **AI Readiness Value**: $300K-2M in accelerated AI initiative delivery
-
-### Strategic Value Propositions
-- **Complete Control**: No vendor lock-in ensures long-term strategic flexibility
-- **Regulatory Confidence**: Full auditability and compliance framework support
-- **Future-Ready Foundation**: AI-enabled platform for next-generation fund operations
-- **Competitive Differentiation**: Superior operational capabilities and investor experience
-
-## Next Steps for Fund Leaders
-
-<CardGroup cols={2}>
-  <Card title="ROI Assessment" icon="chart-line" href="/fund-leaders/implementation/getting-started">
-    Get a customized ROI analysis and readiness assessment for your fund
-  </Card>
-  <Card title="Use Case Examples" icon="building" href="/fund-leaders/use-cases">
-    Explore specific scenarios and outcomes for your fund type
-  </Card>
-  <Card title="Implementation Planning" icon="calendar" href="/fund-leaders/implementation">
-    Understand timelines, resources, and change management approach
-  </Card>
-  <Card title="Open Source Benefits" icon="key" href="/fund-leaders/integration">
-    Learn about strategic control and vendor lock-in prevention
+  <Card title="Getting Started" icon="play" href="/fund-leaders/implementation/getting-started">
+    Begin your AMOS evaluation
   </Card>
 </CardGroup>
