--- a/fund-leaders/use-cases/venture-capital.mdx
+++ b/fund-leaders/use-cases/venture-capital.mdx
@@ -3,297 +3,134 @@ title: "Venture Capital Use Cases"
 description: "Accelerate VC operations with automated portfolio management, real-time startup tracking, and streamlined investor reporting."
 ---
 
-Venture capital funds operate in fast-moving markets where speed and agility are competitive advantages. Amos transforms VC operations by automating portfolio management, enabling real-time startup tracking, and streamlining investor communications while maintaining the flexibility that VC funds need.
+Venture capital funds operate in fast-moving markets where speed and agility are competitive advantages. AMOS transforms VC operations by automating portfolio management, enabling real-time startup tracking, and streamlining investor communications while maintaining the flexibility that VC funds need.
 
-## Key VC Operational Challenges
+## Key VC Operational Areas
 
 <CardGroup cols={2}>
   <Card title="Portfolio Scaling" icon="rocket">
-    Managing 50-100+ portfolio companies with varying data systems, growth stages, and reporting capabilities.
-  </Card>
-  
-  <Card title="Rapid Decision Making" icon="zap">
-    Making investment decisions quickly with limited data and supporting portfolio companies through rapid scaling phases.
+    Manage 50-100+ portfolio companies with automated data collection and standardized tracking.
   </Card>
   
   <Card title="Board Management" icon="users">
-    Coordinating board meetings, tracking action items, and maintaining relationships across diverse portfolio companies.
+    Streamline board meeting preparation, action item tracking, and portfolio company coordination.
+  </Card>
+  
+  <Card title="Investment Decisions" icon="zap">
+    Accelerate decision-making with real-time data and predictive analytics for portfolio support.
   </Card>
   
   <Card title="Exit Planning" icon="trending-up">
-    Identifying exit opportunities, preparing companies for liquidity events, and maximizing returns for LPs.
+    Identify exit opportunities and optimize timing through comprehensive performance tracking.
   </Card>
 </CardGroup>
 
-## Scenario 1: Portfolio Company Growth Tracking
+## Portfolio Company Growth Tracking
 
 ### The Challenge
-A Series A-focused VC fund with 75 portfolio companies struggled to maintain visibility into startup performance across different growth stages. Monthly updates were inconsistent, making it difficult to identify companies needing support or approaching key milestones.
+VC funds with large portfolios struggle to maintain consistent visibility into startup performance across different growth stages, making it difficult to identify companies needing support.
 
-### Amos Solution Implementation
+### AMOS Solution
+- **Unified Portfolio View**: Integration with common startup tools (CRM, cap table, financial systems)
+- **Standardized KPI Collection**: Consistent metrics across different business models
+- **Automated Alerts**: Exception-based notifications for companies requiring attention
+- **Predictive Analytics**: Growth trajectory modeling and risk assessment
 
-#### Adapt Phase: Connect Diverse Startup Systems
-```mermaid
-graph LR
-    A[Startup CRM] --> E[Amos Platform]
-    B[Cap Table Mgmt] --> E
-    C[Financial Systems] --> E
-    D[Product Analytics] --> E
-    E --> F[Unified Portfolio View]
-    E --> G[Growth Metrics Dashboard]
-    E --> H[Alert System]
-```
+### Results
+- Real-time tracking of 75+ companies with automated data collection
+- 80% faster identification of companies needing support
+- 40% improvement in follow-on investment decision accuracy
+- Predictive insights for runway, funding needs, and exit timing
 
-- **Week 1-2**: Integrate with common startup tools (Salesforce, Carta, QuickBooks, Mixpanel)
-- **Week 3-4**: Standardize KPI collection across portfolio companies
-- **Outcome**: Real-time visibility into portfolio performance
-
-#### Align Phase: Standardize Growth Metrics
-- **KPI Framework**: Consistent metrics across different business models (SaaS, marketplace, hardware)
-- **Reporting Cadence**: Automated monthly updates with exception-based alerts
-- **Benchmarking**: Peer comparison and industry standard tracking
-
-#### Upgrade Phase: Predictive Portfolio Intelligence
-- **Growth Trajectory Modeling**: Predict runway, next funding needs, and exit timing
-- **Risk Assessment**: Early warning systems for companies facing challenges
-- **Opportunity Identification**: Automated identification of follow-on investment opportunities
-
-### Portfolio Management Results
-
-<CardGroup cols={3}>
-  <Card title="Portfolio Visibility" icon="eye">
-    **Real-time tracking** of 75+ companies with automated KPI collection
-  </Card>
-  
-  <Card title="Response Speed" icon="clock">
-    **80% faster** identification of companies needing support or intervention
-  </Card>
-  
-  <Card title="Follow-on Success" icon="repeat">
-    **40% improvement** in follow-on investment decision accuracy
-  </Card>
-</CardGroup>
-
-## Scenario 2: Board Meeting Automation & Management
+## Board Meeting Automation & Management
 
 ### The Challenge
-A growth-stage VC fund was managing 40+ board seats, requiring 20-30 hours per week coordinating meetings, preparing materials, and tracking action items. Board packages were often incomplete or outdated due to manual data collection.
+Growth-stage VC funds managing multiple board seats spend significant time coordinating meetings and preparing materials, often with incomplete or outdated data.
 
-### Amos Solution: Intelligent Board Management
-
-#### Current State: Manual Board Coordination
-- **Meeting Prep**: 3-4 hours per board meeting gathering data and creating presentations
-- **Action Tracking**: Manual spreadsheets with limited follow-up capabilities
-- **Document Management**: Email-based sharing with version control issues
-- **Performance Updates**: Static reports with limited interactive analysis
-
-#### Amos Transformation: Automated Board Operations
-
-```mermaid
-graph TD
-    A[Portfolio Company Data] --> D[Amos Board Hub]
-    B[Financial Systems] --> D
-    C[Product Metrics] --> D
-    D --> E[Auto-Generated Board Decks]
-    D --> F[Action Item Tracking]
-    D --> G[Performance Dashboards]
-    D --> H[Meeting Coordination]
-```
-
-**Board Management Features:**
-1. **Automated Board Packages**: Real-time data integration into standardized templates
-2. **Action Item Tracking**: Automated follow-up and progress monitoring
-3. **Performance Dashboards**: Interactive analytics for board discussions
-4. **Meeting Coordination**: Integrated scheduling and document distribution
-
-### Board Management Outcomes
-
-| Process | Before Amos | After Amos | Improvement |
-|---------|-------------|------------|-------------|
-| **Board Prep Time** | 3-4 hours | 30 minutes | 85% reduction |
-| **Data Accuracy** | 70% (manual updates) | 95% (real-time) | 25% improvement |
-| **Action Item Completion** | 60% follow-through | 90% completion | 50% improvement |
-| **Board Satisfaction** | Mixed feedback | Consistently positive | Qualitative improvement |
-
-## Scenario 3: Investor Reporting & LP Communications
-
-### The Challenge
-A multi-stage VC fund with $500M AUM was spending 4-5 weeks each quarter preparing LP reports, struggling to provide timely updates on portfolio performance and market conditions in fast-moving sectors.
-
-### Amos Solution: Real-time Investor Relations
-
-#### Quarterly Reporting Transformation
-
-**Before Amos:**
-- Week 1-2: Manual data collection from 80+ portfolio companies
-- Week 3: Consolidation and analysis of performance metrics
-- Week 4-5: Report writing, review, and distribution
-
-**After Amos:**
-- **Continuous Data Flow**: Real-time integration with portfolio company systems
-- **Automated Analytics**: Dynamic performance analysis and benchmarking
-- **Template-driven Reports**: Consistent formatting with custom insights
-- **Interactive Dashboards**: LP portal with self-service capabilities
-
-#### LP Communication Enhancement
-
-<CardGroup cols={2}>
-  <Card title="Quarterly Reports" icon="file-text">
-    - Real-time portfolio performance data
-    - Automated market analysis and trends
-    - Interactive charts and benchmarking
-    - 90% reduction in preparation time
-  </Card>
-  
-  <Card title="LP Portal" icon="desktop">
-    - Self-service portfolio analytics
-    - Company-level performance tracking
-    - Market intelligence and insights
-    - Secure document sharing
-  </Card>
-</CardGroup>
-
-## Scenario 4: Exit Planning & Value Maximization
-
-### The Challenge
-A late-stage VC fund needed better visibility into exit readiness across portfolio companies, often missing optimal exit windows due to limited real-time performance data and market intelligence.
-
-### Amos Solution: Intelligent Exit Management
-
-#### Exit Readiness Framework
-- **Performance Tracking**: Real-time monitoring of exit-relevant metrics (revenue growth, market position, competitive landscape)
-- **Market Intelligence**: Automated tracking of M&A activity and public market conditions
-- **Readiness Scoring**: AI-powered assessment of exit timing and valuation potential
-- **Process Management**: Coordinated workflow for due diligence and transaction support
-
-#### Exit Planning Results
-
-<CardGroup cols={3}>
-  <Card title="Exit Timing" icon="calendar">
-    **50% improvement** in optimal exit window identification
-  </Card>
-  
-  <Card title="Valuation Optimization" icon="dollar-sign">
-    **15-20% higher** average exit valuations through better preparation
-  </Card>
-  
-  <Card title="Process Efficiency" icon="workflow">
-    **60% faster** exit process execution with automated data rooms
-  </Card>
-</CardGroup>
-
-## VC-Specific Amos Features
-
-### Portfolio Intelligence Suite
-- **Growth Metrics Tracking**: Standardized KPIs across different business models and stages
-- **Benchmarking Analytics**: Peer comparison and industry standard analysis
-- **Predictive Modeling**: Growth trajectory and funding need predictions
-
-### Board Management Platform
-- **Automated Board Packages**: Real-time data integration into presentation templates
+### AMOS Solution
+- **Automated Board Packages**: Real-time data integration into standardized presentation templates
 - **Action Item Tracking**: Centralized task management with automated follow-up
 - **Performance Dashboards**: Interactive analytics for board discussions
+- **Meeting Coordination**: Integrated scheduling and document distribution
 
-### Investor Relations Hub
-- **Real-time Reporting**: Continuous LP updates with portfolio performance data
-- **Market Intelligence**: Automated sector analysis and competitive tracking
-- **LP Portal**: Self-service access with role-based permissions
+### Results
+- 85% reduction in board preparation time (3-4 hours to 30 minutes)
+- Improved data accuracy from 70% to 95% through real-time updates
+- 50% improvement in action item completion rates
+- Enhanced board satisfaction through consistent, accurate reporting
 
-### Exit Optimization Tools
-- **Readiness Assessment**: AI-powered evaluation of exit timing and preparation
-- **Market Monitoring**: Automated tracking of M&A activity and market conditions
+## Investor Reporting & LP Communications
+
+### The Challenge
+Multi-stage VC funds often spend 4-5 weeks each quarter preparing LP reports, struggling to provide timely updates on portfolio performance in fast-moving sectors.
+
+### AMOS Solution
+- **Real-time Data Integration**: Continuous portfolio company system connectivity
+- **Automated Report Generation**: Template-driven quarterly reports with custom insights
+- **LP Portal**: Self-service access to portfolio analytics and market intelligence
+- **Dynamic Analysis**: Automated performance analysis and benchmarking
+
+### Results
+- 90% reduction in quarterly report preparation time
+- Real-time portfolio performance visibility for LPs
+- Enhanced market intelligence and trend analysis
+- Improved LP satisfaction through timely, comprehensive reporting
+
+## Exit Planning & Value Maximization
+
+### The Challenge
+Late-stage VC funds often miss optimal exit windows due to limited real-time performance data and market intelligence across their portfolio.
+
+### AMOS Solution
+- **Exit Readiness Tracking**: Real-time monitoring of exit-relevant metrics
+- **Market Intelligence**: Automated M&A activity and market condition tracking
+- **Readiness Scoring**: AI-powered assessment of exit timing and valuation potential
 - **Process Management**: Coordinated workflows for transaction execution
 
-## Implementation Roadmap for VC Funds
+### Results
+- 50% improvement in optimal exit window identification
+- Enhanced exit valuations through better preparation and timing
+- 60% faster exit process execution with automated data rooms
+- Improved coordination between portfolio companies and transaction teams
 
-### Phase 1: Portfolio Foundation (Months 1-2)
-- Connect portfolio company data sources and standardize KPI collection
-- Implement basic reporting automation and performance dashboards
-- Establish data governance for diverse startup systems
+## Key AMOS Capabilities for VC Funds
 
-### Phase 2: Operational Enhancement (Months 3-4)
-- Deploy board management automation and LP reporting capabilities
-- Integrate market intelligence and benchmarking analytics
-- Launch investor portal with self-service capabilities
+### Portfolio Intelligence
+- Standardized KPI tracking across different business models and growth stages
+- Benchmarking analytics with peer comparison and industry standards
+- Predictive modeling for growth trajectories and funding needs
 
-### Phase 3: Strategic Optimization (Months 5-6)
-- Enable predictive analytics for growth and exit planning
-- Implement AI-powered portfolio optimization and risk assessment
-- Deploy advanced market intelligence and competitive analysis
+### Board Management
+- Automated board package generation with real-time data integration
+- Centralized action item tracking with automated follow-up
+- Interactive performance dashboards for board discussions
 
-## ROI Analysis for VC Funds
+### Investor Relations
+- Real-time LP reporting with continuous portfolio performance updates
+- Market intelligence with automated sector analysis
+- Self-service LP portal with role-based access
 
-### Operational Efficiency Gains
-- **Portfolio Management**: 70% reduction in manual tracking and reporting time
-- **Board Operations**: 85% decrease in meeting preparation time
-- **LP Reporting**: 90% faster quarterly report generation
+### Exit Optimization
+- AI-powered readiness assessment for exit timing and preparation
+- Automated market monitoring for M&A activity and conditions
+- Coordinated transaction workflows and data room management
 
-### Investment Performance Enhancement
-- **Decision Speed**: 50% faster investment decision-making with real-time data
-- **Portfolio Support**: 40% improvement in identifying companies needing assistance
-- **Exit Optimization**: 15-20% higher average exit valuations
+## Implementation Approach
 
-### Cost Savings & Revenue Impact
-- **Operational Costs**: $300K-$500K annual savings in manual processes
-- **Technology Consolidation**: 40% reduction in portfolio company tool costs
-- **Fund Performance**: 2-5% improvement in overall fund returns through better portfolio management
+AMOS follows a practical three-phase implementation:
 
-## VC Fund Size Considerations
+1. **Portfolio Foundation (Months 1-2)**: Connect portfolio company systems and standardize KPI collection
+2. **Operational Enhancement (Months 3-4)**: Deploy board management and LP reporting automation
+3. **Strategic Optimization (Months 5-6)**: Enable predictive analytics and AI-powered insights
 
-### Early-Stage Funds ($50M-$200M)
-- **Focus**: Portfolio tracking and board management automation
-- **Key Benefits**: Operational efficiency and LP reporting improvements
-- **Implementation**: 2-3 month rollout with emphasis on core features
+## Expected Outcomes
 
-### Growth-Stage Funds ($200M-$1B)
-- **Focus**: Advanced analytics and exit optimization
-- **Key Benefits**: Enhanced decision-making and portfolio value creation
-- **Implementation**: 4-6 month rollout with full feature deployment
-
-### Multi-Stage Funds ($1B+)
-- **Focus**: Comprehensive platform with AI-powered insights
-- **Key Benefits**: Strategic portfolio optimization and market intelligence
-- **Implementation**: 6+ month rollout with custom integrations
+VC funds typically achieve:
+- **Operational Efficiency**: Significant reduction in manual tracking and board preparation time
+- **Enhanced Decision Making**: Faster investment decisions and improved portfolio support
+- **Exit Optimization**: Better timing and higher average exit valuations
+- **LP Satisfaction**: Improved investor relations through real-time, comprehensive reporting
 
 ## Getting Started
 
-<Card title="VC Fund Assessment" icon="clipboard-check" href="/fund-leaders/implementation/getting-started">
-  Complete our VC-specific readiness assessment to identify your highest-impact implementation priorities and expected outcomes.
-</Card>
-
-## Success Stories
-
-Discover how VC funds are transforming their operations:
-
-<CardGroup cols={2}>
-  <Card title="Series A Fund" icon="rocket" href="/fund-leaders/success-stories/case-study-1">
-    $200M fund improved portfolio visibility across 60+ companies and reduced board prep time by 85%.
-  </Card>
-  
-  <Card title="Growth-Stage Fund" icon="chart-line" href="/fund-leaders/success-stories/case-study-2">
-    $750M fund enhanced exit planning and achieved 20% higher average valuations.
-  </Card>
-</CardGroup>
-
-## AI Readiness for VC Funds
-
-Venture capital is uniquely positioned to benefit from AI-powered insights:
-
-### Investment Decision Support
-- **Deal Scoring**: ML-powered evaluation of investment opportunities
-- **Market Analysis**: Automated competitive intelligence and trend identification
-- **Due Diligence**: AI-assisted risk assessment and opportunity validation
-
-### Portfolio Optimization
-- **Growth Prediction**: Forecasting portfolio company trajectories and funding needs
-- **Resource Allocation**: Optimizing partner time and support resource deployment
-- **Exit Timing**: Predictive modeling for optimal liquidity event timing
-
-### Market Intelligence
-- **Trend Detection**: Early identification of emerging market opportunities
-- **Competitive Analysis**: Automated tracking of competitive landscape changes
-- **Sector Insights**: AI-powered analysis of sector-specific performance patterns
-
-The venture capital industry's fast-paced, data-driven nature makes it an ideal candidate for AI enhancement, and Amos provides the unified data foundation necessary for successful AI implementations.
-
-Ready to transform your VC operations? Explore our [implementation guide](/fund-leaders/implementation/getting-started) or [schedule a consultation](/contact) to discuss your specific needs.
+Ready to accelerate your VC operations? Explore our [implementation guide](/fund-leaders/implementation/getting-started) to understand the practical steps for your fund size and focus.
